--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<head>
+    <title>我的 GitHub Pages 網站</title>
+</head>
+<body>
+    <h1>歡迎來到我的網站！</h1>
+    <p>測試維修中。</p>
+    <p>房屋修建中.....</p>
+</body>
+</html>
